framec_tests/language_specific/rust/v3_mir/positive/forward_parent.frm
@target rust

system S {
    machine:
        $A => $P {
            e() {
                => $^
            }
        }
        $P { }
}
