framec_tests/language_specific/rust/v3_mir/negative/forward_trailing_tokens.frm
@target rust

system S {
    machine:
        $A {
            e() {
                => $^ extra
            }
        }
}

